--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,24 +19,8 @@
   				<a class="navbar-brand">Telestax</a>
     				<!-- <img src="./img/logo.png" > -->
 					</a>	
-				
-  				<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-  				</button>
-
-		  		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    		<ul class="navbar-nav mr-auto">
-		      				<li class="nav-item active">
-		        				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		      				</li>
-		    		</ul>
-		    	</div> -->
-		</nav>
-		<div STYLE="position:absolute; TOP:60px; right:50px">
-			<form action="/index">
-				<button class="btn btn-primary" id="logoutbtn">LOGOUT</button>
-			</form>
-				</div>
+				</nav>
+  	
 		<!-- end header -->
 
 		<!-- start content -->
@@ -142,7 +126,8 @@
 		        </button>
 		      </div>
 		      <div class="modal-body">
-		      	<h3>Are you sure you want to delete the mapping?</h3>
+						<h3>Mapping will be Deleted Permanently</h3>
+		      	<h3>Are you sure?</h3>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
