--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -47,7 +47,8 @@
 							            <th>Sr no</th>
 							            <th>id</th>
 							            <th>jabberAddress</th>
-							            <th>External Address</th>
+													<th>External Address</th>
+													<th>Friendly name</th>
 							            <th>Operation</th>
 							        </tr>
 							    </thead>
@@ -58,9 +59,10 @@
 							            <td><%=mapping[map].no%></td>
 							            <td><%=mapping[map].id%></td>
 							            <td><%=mapping[map].jabberAddress%></td>
-							            <td><%=mapping[map].externalAddress%></td>
+													<td><%=mapping[map].externalAddress%></td>
+													<td><%=mapping[map].friendlyname%></td>
 							            <td>
-							            	<span class="btn btn-sm btn-warning" data-toggle="modal" data-target="#editModal" onclick="editData('<%=mapping[map].id%>',<%=mapping[map].no%>,'<%=mapping[map].jabberAddress%>','<%=mapping[map].externalAddress%>')">
+							            	<span class="btn btn-sm btn-warning" data-toggle="modal" data-target="#editModal" onclick="editData('<%=mapping[map].id%>',<%=mapping[map].no%>,'<%=mapping[map].jabberAddress%>','<%=mapping[map].externalAddress%>','<%=mapping[map].friendlyname%>')">
 							            		Edit
 							            	</span>
 							            	<span class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="deleteData('<%=mapping[map].id%>')" >
@@ -104,6 +106,10 @@
 					    <label for="editrcnumber">RC NUMBER</label>
 					    <input type="text" class="form-control" id="editrcnumber" placeholder="RC NUMBER">
 					</div>
+					<div class="form-group">
+						<label for="editfriendlyname">Friendly Name</label>
+						<input type="text" class="form-control" id="editfriendlyname" placeholder="friendlyname">
+				</div>
 				</form> 
 		      </div>
 		      <div class="modal-footer">
@@ -160,6 +166,10 @@
 					    <label for="newrcnumber">RC NUMBER</label>
 					    <input type="text" class="form-control" id="newrcnumber" placeholder="RC NUMBER">
 					</div>
+					<div class="form-group">
+						<label for="friendlyname">Friendly Name</label>
+						<input type="text" class="form-control" id="friendlyname" placeholder="Friendly name">
+				</div>
 				</form> 
 		      </div>
 		      <div class="modal-footer">
